force-app/main/default/objects/AAV_Asset_Availability__c/AAV_Asset_Availability__c.object-meta.xml
<CustomObject>
    <description>Object to track Asset/Product availability on product configuration.</description>
    <label>Asset Availability</label>
    <nameField>
        <displayFormat>AAV-{00000000}</displayFormat>
        <label>Asset Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>