force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_APIRequestOutput__c.field-meta.xml
<CustomField>
    <fullName>AAV_APIRequestOutput__c</fullName>
    <label>APIRequestOutput</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>