force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Case__c.field-meta.xml
<CustomField>
    <fullName>AAV_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Asset Availabilities</relationshipLabel>
    <relationshipName>Asset_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>