force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>AAV_Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>