force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Equipment_Code__c.field-meta.xml
<CustomField>
    <fullName>AAV_Equipment_Code__c</fullName>
    <label>Equipment Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>