force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_isAPIResult__c.field-meta.xml
<CustomField>
    <fullName>AAV_isAPIResult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAPIResult</label>
    <type>Checkbox</type>
</CustomField>