force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>AAV_Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolloff</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Waste Stream</fullName>
                <isActive>false</isActive>
                <label>Waste Stream</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>