force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Location__c.field-meta.xml
<CustomField>
    <fullName>AAV_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for pass Account Name value in Availability API call</description>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Availabilities</relationshipLabel>
    <relationshipName>Asset_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>