force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>AAV_Location_Name__c</fullName>
    <description>This field is used for store Account Name</description>
    <label>Location Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>