force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_MaterialCode__c.field-meta.xml
<CustomField>
    <fullName>AAV_MaterialCode__c</fullName>
    <label>Material Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AAV_Line_of_Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
                <label>Trash</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cardboard</label>
            </value>
            <value>
                <fullName>C&amp;D</fullName>
                <label>Construction / Demolition</label>
            </value>
            <value>
                <fullName>SSR</fullName>
                <label>Single Stream Recycling</label>
            </value>
            <value>
                <fullName>ORGANIC</fullName>
                <label>Organic Waste</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>Metal</label>
            </value>
            <value>
                <fullName>CU</fullName>
                <label>Copper</label>
            </value>
            <value>
                <fullName>No Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>