force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Pricing_Request__c.field-meta.xml
<CustomField>
    <fullName>AAV_Pricing_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Request</label>
    <referenceTo>Pricing_Request__c</referenceTo>
    <relationshipLabel>Asset Availabilities</relationshipLabel>
    <relationshipName>Asset_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>