force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>AAV_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Asset Availabilities</relationshipLabel>
    <relationshipName>Asset_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>