force-app/main/default/objects/AAV_Asset_Availability__c/fields/AAV_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>AAV_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEMP</fullName>
                <label>Temporary</label>
            </value>
            <value>
                <fullName>PERM</fullName>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>SEAS</fullName>
                <isActive>false</isActive>
                <label>Seasonal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>