force-app/main/default/objects/AAV_Asset_Availability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AAV_Quote_Line__c</columns>
    <columns>AAV_isAPIResult__c</columns>
    <columns>AAV_Line_of_Business__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>